# cargo-edit-locally

./: Cargo.toml
src/: main.rs
tests/: log.rs
