[package]
name = "cargo-edit-locally"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Hugo Tunius <h@tunius.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["subcommand"]
repository = "https://github.com/k0nserv/cargo-edit-locally"
description = """
A Cargo subcommand to edit dependencies locally via `[replace]`
"""
edition = "2021"

[dependencies]
anyhow = "1"
cargo = "0.68"
cargo-util = "0.2"
curl = "0.4.26"
docopt = "1.1.0"
env_logger = { version = "0.10", default-features = false }
git2 = "0.16"
pathdiff = "0.2"
serde = { version = "1.0.152", features = ['derive'] }
serde_json = "1.0.93"
toml = "0.7.2"
url = "*"
openssl = { version = '0.10.28', optional = true }

[features]
vendored-openssl = ['openssl/vendored']
